# fs_sim

./: .gitignore  CMakeLists.txt  README.md  fixesby_gemini3.md
docs/: PROJECT_DOCUMENTATION.md  design.md  hld_lld.md  indirect_block_explanation.md  invariants.md  optimizations.md  roadmap.md
include/fs/: block_group_manager.hpp  disk.hpp  disk_datastructures.hpp  filesystem.hpp
include/util/: tokenizer.h
src/: main.cpp
src/fs/: block_group_manager.cpp  disk.cpp  filesystem.cpp
src/util/: tokenizer.cpp
tests/: all_tests.cpp  disk_test.cpp  fs_directory_test.cpp  fs_operations_test.cpp  fs_permissions_test.cpp  fs_persistence_test.cpp  fs_stress_test.cpp  fs_test.cpp  permission_test.cpp
